# srv-data-api

./: Pipfile  README.md  create_tables.py  drop_tables.py  pyproject.toml  requirements.txt
api/: config.py  database.py  dependencies.py  main.py  models.py  receiver.py  schema.py
