[tool.poetry]
name = "srv-data-api"
version = "0.1.0"
description = ""
authors = ["Jonathan Breidfjord <jbreidfjord@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.35"


[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
